--- a/debian/rules
+++ b/debian/rules
@@ -6,8 +6,7 @@ export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
 	dh $@ -Bbuild -Sqmake
 
 override_dh_auto_configure:
-	dh_auto_configure -- \
-	MLT_SOURCE=$(CURDIR)/mlt-6-12-0 ../
+	dh_auto_configure -- ../
 
 override_dh_install:
 	rm debian/tmp/usr/lib/libwebvfx.so
